adjusted h elements mentioned in feedback

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <aside class="benefits">
         <article class="benefit">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Gear Funnel Money"/>
+            <img src="./assets/images/lead-generation.png" alt="Gear Funnel Money Icons"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -76,7 +76,7 @@
         </article>
     </aside>
     <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
